# opengl_test

./: .gitignore  CMakeLists.txt
models/: umyvadlo.glb
shaders/: pbr.frag  pbr.vert
src/: main.cpp
